fix(DLB/front): overflow en los formularios

--- a/front/src/Dashboard/components/Formularios/FormularioRetiros/FormularioRetiros.css
+++ b/front/src/Dashboard/components/Formularios/FormularioRetiros/FormularioRetiros.css
@@ -68,8 +68,6 @@
     display: grid;
     grid-template-columns: 45% 45%; /* Dos columnas de 45% de ancho cada una */
     gap: 8%; /* Espacio del 10% entre las columnas */
-
-    overflow-x: scroll;
     height: 1000px;
   }
   .Dataevent{
@@ -97,6 +95,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    overflow-x: auto;
   }
   
   .labelsCarrousel {
